--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
     <div id="container">
         <div id="profile">
-            <img src="./assets/up_re.png" alt="foto de rosto do Eduardo, aparecendo a cabeça e a 
-            parte superior do peito coberta por uma camisa preta, cm fundo branco">
+            <img src="./assets/up_re.png" alt="foto de rosto do Eduardo, na formatura usando toga e sentado.">
             <p>@riffel_edu</p>
         <div id="switch" onclick="toggleMode()">
             <button></button>
@@ -41,7 +40,7 @@
     </div>
     <div>
         <footer>
-            Feito por Eduardo Riffel 
+            Feito com ♥ pela <a href="https://rocketseat.com.br/">Rocketseat</a> 
         </footer>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
